external-crates/move/crates/move-compiler/tests/move_check/parser/function_conflicting_visibility.move
module 0x0::M {
    public(friend) public(package) fun f() {}
    public(package) public(friend) fun g() {}
}
